--- a/layout-flex.html
+++ b/layout-flex.html
@@ -1,62 +1,52 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>layout</title>
-        <style>
-            body {
-                width: 100%;
-                height: 100%;
-                margin: 0px;
-            }
-            .main {
-                width: 100vw;
-                height: 100vh;
-            }
-            .row {
-                width: 100vw;
-                height: 50vh;
+<head>
+    <title>Basic layout-Flex</title>
+    <style>
+        body {
+            height: 100vh;
+            width: 100vw;
+            margin: 0;
+        }
+        .main {
+            height: 100vh;
+            display: flex;
+            flex-direction: column;
+           
+        }
+        .row1 {
+            height: 50%;
+            width: 100%;
+            display: flex;
+            
+        }
+        .div1 {
+            background: yellow;
+            flex: 1;
 
-            }
-            .div1 {
-                float: left;
-                width: 50%;
-                height: 100%;
-                background: yellow;
-                display: flex;
-                justify-content: center;
-                align-items: center;
+        }
+        .div2 {
+            background: green;
+            flex: 1;
+        }
+        .div3 {
+            background: blue;
+            height: 50vh;
+            display: flex;
+            flex:1
+        }
+    </style>
+</head>
 
-            }
-            .div2 {
-                float: right;
-                width: 50%;
-                height: 100%;
-                background: green;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-
-            }
-            .div3 {
-                float: center ;
-                clear: both;
-                width: 100vw;
-                height: 50vh;
-                background: blue;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-
-            }
-        </style>
-    </head>
-    <body>
-        <div class="main">
-            <div class="row">
-                <div class="div1">section 1</div>
-                <div class="div2">section 2</div>
-            </div>
-            <div class="div3">section 3</div>
+<body>
+    <div class="main">
+        <div class="row1">
+            <div class="div1">section 1</div>
+            <div class="div2">section 2</div>
         </div>
-    </body>
+        <div class="div3">section 3</div>
+    </div>
+</body>
+</html>
+
 </html>
