--- a/layout-grid.html
+++ b/layout-grid.html
@@ -25,7 +25,7 @@
 
             }
             .div2 {
-                background: green;
+                background: red;
                 
             }
             .div3 {
