Update BMW site HTML and CSS

--- a/car-site/bmw-site.html
+++ b/car-site/bmw-site.html
@@ -8,7 +8,21 @@
 </head>
 <body>
 
+  <div class="slider">
+    <section class="slide">
+      <div class="page1">
+        
 
+      </div>
+    </section>
+    <section class="slide">page 2</section>
+    <section class="slide">page 3</section>
+    <section class="slide">page 4</section>
+    <section class="slide">page 5</section>
+    <section class="slide">page 6</section>
+    <section class="slide">page 7</section>
+    <section class="slide">page 8</section>
+  </div>
 
 </body>
 </html>
