Update BMW M4 page layout and styles

--- a/car-site/bmw-site.html
+++ b/car-site/bmw-site.html
@@ -3,14 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <title>BMW M4 Concept</title>
-  <link rel="stylesheet" href="bmv-style.css">
+  <link rel="stylesheet" href="bmw-style.css">
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
 
   <div class="slider">
-    <section class="slide">
-      <div class="page1">
+    <section class="slide page1">
+      
+      <div class="page1-blur">
+        <div class="menu">
+          <h4><b>ABOUT M SERIES</b></h4>
+          <p>INTERIOR & EXTERIOR</p>
+          <p>Specifications</p>
+          <P>TEST DRIVE</P>
+          <p>CONTACT</p>
+        </div>
         
 
       </div>
