Add buttons in slide8

--- a/car-site/bmw-site.html
+++ b/car-site/bmw-site.html
@@ -55,7 +55,18 @@
     </section>
       
     <section class="slide page8">
-      <div class="testdrive">
+      <div class="testdrive-blur">
+
+        <h2>TEST DRIVE</h2>
+        <p class="subtitle">Experience the thrill behind the wheel</p>
+
+        <form class="testdrive-form">
+          <input type="text" placeholder="Name">
+          <input type="text" placeholder="City">
+          <input type="email" placeholder="Email">
+          <input type="phone" placeholder="Phone Number">
+          <input type="date"><button type="button">START</button>
+        </form>
         
       </div>
     </section>
