--- a/car-site/bmw-site.html
+++ b/car-site/bmw-site.html
@@ -64,7 +64,7 @@
           <input type="text" placeholder="Name">
           <input type="text" placeholder="City">
           <input type="email" placeholder="Email">
-          <input type="phone" placeholder="Phone Number">
+          <input type="tel" placeholder="Phone Number">
           <input type="date"><button type="button">START</button>
         </form>
         
