--- a/car-site/bmw-site.html
+++ b/car-site/bmw-site.html
@@ -5,10 +5,13 @@
   <title>BMW M4 Concept</title>
   <link rel="stylesheet" href="bmw-style.css">
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;600&display=swap" rel="stylesheet">
+   <img src="./images/BMW_logo-removebg-preview.png" alt="BMW Logo" class="logo">
 </head>
 <body>
 
+
   <div class="slider">
+
     <section class="slide page1">
       
       <div class="page1-blur">
