styled buttons and blur pages

--- a/car-site/bmw-site.html
+++ b/car-site/bmw-site.html
@@ -15,9 +15,10 @@
     <section class="slide page1">
       <div class="page-logos">
         <img src="./images/BMW_logo-removebg-preview.png" alt="BMW Logo" class="logo">
-        <img src="./images/youtube_logo.png" alt="youtube logo" class="social youtube">
-        <img src="./images/instagram_logo.png" alt="instagram logo" class="social instagram">
         <img src="./images/facebook_logo.png" alt="facebook logo" class="social facebook">
+        <img src="./images/linkedin_logo.png" alt="linkedin logo" class="social linkedin">
+        <img src="./images/instagram_logo.png" alt="instagram logo" class="social instagram">
+        <img src="./images/youtube_logo.png" alt="youtube logo" class="social youtube">
       </div>
 
 
@@ -36,9 +37,10 @@
     <section class="slide page2">
       <div class="page-logos">
         <img src="./images/BMW_logo-removebg-preview.png" alt="BMW Logo" class="logo">
-        <img src="./images/youtube_logo.png" alt="youtube logo" class="social youtube">
-        <img src="./images/instagram_logo.png" alt="instagram logo" class="social instagram">
         <img src="./images/facebook_logo.png" alt="facebook logo" class="social facebook">
+        <img src="./images/linkedin_logo.png" alt="linkedin logo" class="social linkedin">
+        <img src="./images/instagram_logo.png" alt="instagram logo" class="social instagram">
+        <img src="./images/youtube_logo.png" alt="youtube logo" class="social youtube">
       </div>
 
 
@@ -49,9 +51,10 @@
     <section class="slide page3">
       <div class="page-logos">
         <img src="./images/BMW_logo-removebg-preview.png" alt="BMW Logo" class="logo">
-        <img src="./images/youtube_logo.png" alt="youtube logo" class="social youtube">
-        <img src="./images/instagram_logo.png" alt="instagram logo" class="social instagram">
         <img src="./images/facebook_logo.png" alt="facebook logo" class="social facebook">
+        <img src="./images/linkedin_logo.png" alt="linkedin logo" class="social linkedin">
+        <img src="./images/instagram_logo.png" alt="instagram logo" class="social instagram">
+        <img src="./images/youtube_logo.png" alt="youtube logo" class="social youtube">
       </div>
 
 
@@ -63,9 +66,10 @@
     <section class="slide page4">
       <div class="page-logos">
         <img src="./images/BMW_logo-removebg-preview.png" alt="BMW Logo" class="logo">
-        <img src="./images/youtube_logo.png" alt="youtube logo" class="social youtube">
-        <img src="./images/instagram_logo.png" alt="instagram logo" class="social instagram">
         <img src="./images/facebook_logo.png" alt="facebook logo" class="social facebook">
+        <img src="./images/linkedin_logo.png" alt="linkedin logo" class="social linkedin">
+        <img src="./images/instagram_logo.png" alt="instagram logo" class="social instagram">
+        <img src="./images/youtube_logo.png" alt="youtube logo" class="social youtube">
       </div>
 
 
@@ -78,9 +82,10 @@
     <section class="slide page5">
        <div class="page-logos">
         <img src="./images/BMW_logo-removebg-preview.png" alt="BMW Logo" class="logo">
-        <img src="./images/youtube_logo.png" alt="youtube logo" class="social youtube">
-        <img src="./images/instagram_logo.png" alt="instagram logo" class="social instagram">
         <img src="./images/facebook_logo.png" alt="facebook logo" class="social facebook">
+        <img src="./images/linkedin_logo.png" alt="linkedin logo" class="social linkedin">
+        <img src="./images/instagram_logo.png" alt="instagram logo" class="social instagram">
+        <img src="./images/youtube_logo.png" alt="youtube logo" class="social youtube">
       </div>
 
 
@@ -93,9 +98,10 @@
     <section class="slide page6">
       <div class="page-logos">
         <img src="./images/BMW_logo-removebg-preview.png" alt="BMW Logo" class="logo">
-        <img src="./images/youtube_logo.png" alt="youtube logo" class="social youtube">
-        <img src="./images/instagram_logo.png" alt="instagram logo" class="social instagram">
         <img src="./images/facebook_logo.png" alt="facebook logo" class="social facebook">
+        <img src="./images/linkedin_logo.png" alt="linkedin logo" class="social linkedin">
+        <img src="./images/instagram_logo.png" alt="instagram logo" class="social instagram">
+        <img src="./images/youtube_logo.png" alt="youtube logo" class="social youtube">
       </div>
 
 
@@ -108,15 +114,25 @@
     <section class="slide page7">
       <div class="page-logos">
         <img src="./images/BMW_logo-removebg-preview.png" alt="BMW Logo" class="logo">
-        <img src="./images/youtube_logo.png" alt="youtube logo" class="social youtube">
-        <img src="./images/instagram_logo.png" alt="instagram logo" class="social instagram">
         <img src="./images/facebook_logo.png" alt="facebook logo" class="social facebook">
+        <img src="./images/linkedin_logo.png" alt="linkedin logo" class="social linkedin">
+        <img src="./images/instagram_logo.png" alt="instagram logo" class="social instagram">
+        <img src="./images/youtube_logo.png" alt="youtube logo" class="social youtube">
       </div>
 
 
 
-      <div class="interior2">
-
+      <div class="dashboard">
+        <div class="dashboard-img">
+          <img src="./images/bmw_dashboard.jpg" alt="BMW dashboard">
+        </div>
+        <div class="dashboard-text">
+          <p>
+            Instrument cluster designed using M styling elements,
+            clearly displaying all essential driving information.
+          </p>
+          <span>Learn more -></span>
+        </div>
       </div>
 
     </section>
@@ -124,9 +140,10 @@
     <section class="slide page8">
       <div class="page-logos">
         <img src="./images/BMW_logo-removebg-preview.png" alt="BMW Logo" class="logo">
-        <img src="./images/youtube_logo.png" alt="youtube logo" class="social youtube">
-        <img src="./images/instagram_logo.png" alt="instagram logo" class="social instagram">
         <img src="./images/facebook_logo.png" alt="facebook logo" class="social facebook">
+        <img src="./images/linkedin_logo.png" alt="linkedin logo" class="social linkedin">
+        <img src="./images/instagram_logo.png" alt="instagram logo" class="social instagram">
+        <img src="./images/youtube_logo.png" alt="youtube logo" class="social youtube">
       </div>
 
       <div class="testdrive-blur">
