Add and style page 5

--- a/car-site/bmw-site.html
+++ b/car-site/bmw-site.html
@@ -90,8 +90,13 @@
 
 
 
-      <div class="int-ext">
-
+      <div class="inte-exte">
+        <div class="inte-left">
+          <span class="label interior">INTERIOR</span>
+        </div>
+        <div class="inte-right">
+          <span class="label exterior">EXTERIOR</span>
+        </div>
       </div>
 
     </section>
