--- a/car-site/bmw-site.html
+++ b/car-site/bmw-site.html
@@ -128,16 +128,21 @@
 
 
       <div class="dashboard">
+
         <div class="dashboard-img">
-          <img src="./images/bmw_dashboard.jpg" alt="BMW dashboard">
+          <img src="./images/bmw_cluster.jpg" alt="BMW cluster">
         </div>
+        
         <div class="dashboard-text">
-          <p>
+          <div class="inner-text">
+            <p>
             Instrument cluster designed using M styling elements,
             clearly displaying all essential driving information.
-          </p>
-          <span>Learn more -></span>
+            </p>
+            <span>Learn more →</span>
+          </div>
         </div>
+
       </div>
 
     </section>
