--- a/car-site/check.html
+++ b/car-site/check.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>BMW Exact Card</title>
+<title>BMW Page 3 – Car Lights</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;600&display=swap" rel="stylesheet">
 
@@ -20,118 +20,152 @@ html,body{
   overflow:hidden;
 }
 
-/* ===== BACKGROUND ===== */
-.page{
-  position:relative;
-  width:100vw;
-  height:100vh;
-  background:url("./images/behance_img_10.jpg") center/cover no-repeat;
+/* ===== PAGE 3 NEON DARK BACKGROUND ===== */
+.page3 {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+  background:
+    radial-gradient(circle at 15% 30%, rgba(80,0,120,.9), transparent 55%),
+    radial-gradient(circle at 90% 70%, rgba(180,0,90,.9), transparent 55%),
+    linear-gradient(120deg, #050014, #120018, #1a001f);
 }
 
-.page::before{
+/* ===== SOFT GLASS SHADE LEFT ===== */
+.page3::after {
   content:"";
   position:absolute;
   inset:0;
-  background:linear-gradient(
-    120deg,
-    rgba(40,30,60,.45),
-    rgba(120,40,70,.55)
+  background: linear-gradient(
+    90deg,
+    rgba(0,0,0,.85) 0%,
+    rgba(0,0,0,.55) 35%,
+    transparent 70%
   );
-  backdrop-filter:blur(4px);
+  z-index:0;
 }
 
-/* ===== WRAPPER (MOVE TO TOP) ===== */
-.wrapper{
-  position:absolute;
-  top:18%;                 /* 🔴 FIX 1: move to top */
-  left:50%;
-  transform:translateX(-50%);
-  width:640px;
+/* ===== MAIN LAYOUT ===== */
+.carlights {
+  position: relative;
+  z-index: 2;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 7%;
 }
 
-/* ===== IMAGE PARALLELOGRAM ===== */
-.image-box{
-  position:relative;
-  height:230px;
-  clip-path:polygon(
-    18% 0%,
-    100% 0%,
-    82% 100%,
-    0% 100%
-  );
-  overflow:hidden;
-  background:#000;
-  z-index:2;
+/* ===== LEFT TEXT ===== */
+.carlights-text {
+  width: 40%;
+  color: white;
 }
 
-.image-box img{
-  width:100%;
-  height:100%;
-  object-fit:cover;
+.carlights-text h2 {
+  font-size: 36px;
+  letter-spacing: 3px;
+  margin-bottom: 28px;
 }
 
-/* ===== TEXT PARALLELOGRAM ===== */
-.text-box{
-  position:relative;
-  width:560px;
-  margin:-55px auto 0;
-  background:rgba(0,0,0,.78);
-  clip-path:polygon(
+.carlights-text p {
+  font-size: 15px;
+  line-height: 1.9;
+  opacity: 0.85;
+}
+
+/* ===== RIGHT IMAGE STACK ===== */
+.carlights-images {
+  position: relative;
+  width: 52%;
+  height: 430px;
+}
+
+/* Parallelogram cards */
+.img-card {
+  position: absolute;
+  width: 480px;
+  height: 250px;
+  clip-path: polygon(
     20% 0%,
     100% 0%,
     80% 100%,
     0% 100%
   );
-  z-index:1;
+  overflow: hidden;
+  background: #000;
+  box-shadow: 0 30px 70px rgba(0,0,0,.9);
 }
 
-/* 🔴 FIX 2: INNER CONTENT SAFE AREA */
-.text-inner{
-  padding:98px 114px 74px;   /* enough space from edges */
-  color:#fff;
+.img-card img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
-/* TEXT */
-.text-inner p{
-  font-size:15px;
-  line-height:1.8;
-  opacity:.9;
-  margin-bottom:22px;
+/* ===== TOP CARD ===== */
+.top-card {
+  top: 0;
+  right: 0;
+  z-index: 2;
 }
 
-.text-inner span{
-  font-size:14px;
-  letter-spacing:1px;
-  cursor:pointer;
-  opacity:.85;
+/* ===== BOTTOM CARD ===== */
+.bottom-card {
+  bottom: 0;
+  right: 110px;
+  z-index: 1;
 }
 
-.text-inner span:hover{
-  opacity:1;
+/* ===== NEON GLOW ON IMAGES ===== */
+.img-card::after {
+  content:"";
+  position:absolute;
+  inset:0;
+  background:
+    radial-gradient(circle at 75% 30%,
+      rgba(255,90,160,.35),
+      transparent 60%
+    ),
+    linear-gradient(
+      120deg,
+      rgba(255,255,255,.06),
+      rgba(0,0,0,.35)
+    );
+  pointer-events:none;
 }
 </style>
 </head>
 
 <body>
 
-<section class="page">
+<section class="slide page3">
 
-  <div class="wrapper">
+  <div class="carlights">
 
-    <!-- IMAGE -->
-    <div class="image-box">
-      <img src="./images/bmw_dashboard.jpg" alt="BMW Instrument Cluster">
+    <!-- LEFT TEXT -->
+    <div class="carlights-text">
+      <h2>LED HEADLIGHTS & TAILLIGHTS</h2>
+      <p>
+        Rear lights, like headlights, use exclusively LED light functions.
+        The elongated L-shaped design with closed lighting lines ensures a smooth
+        transition into the trunk lid and highlights the elegance of the rear body.
+      </p>
     </div>
 
-    <!-- TEXT -->
-    <div class="text-box">
-      <div class="text-inner">
-        <p>
-          Instrument cluster designed using M styling elements,
-          clearly displaying all essential driving information.
-        </p>
-        <span>Learn more →</span>
+    <!-- RIGHT PARALLELOGRAM IMAGES -->
+    <div class="carlights-images">
+
+      <div class="img-card top-card">
+        <img src="./images/behance_img_7 (head-light).jpg" alt="BMW Headlight">
       </div>
+
+      <div class="img-card bottom-card">
+        <img src="./images/behance_img_5 (tail-light).jpg" alt="BMW Taillight">
+      </div>
+
     </div>
 
   </div>
