add some changes

--- a/car-site/bmw-site.html
+++ b/car-site/bmw-site.html
@@ -12,6 +12,7 @@
 
   <div class="slider">
 
+    <!-- //page_1// -->
     <section class="slide page1">
       <div class="page-logos">
         <img src="./images/BMW_logo-removebg-preview.png" alt="BMW Logo" class="logo">
@@ -34,6 +35,8 @@
 
       </div>
     </section>
+
+    <!-- //page_2// -->
     <section class="slide page2">
       <div class="page-logos">
         <img src="./images/BMW_logo-removebg-preview.png" alt="BMW Logo" class="logo">
@@ -48,6 +51,8 @@
 
       </div>
     </section>
+
+    <!-- //page_3// -->
     <section class="slide page3">
       <div class="page-logos">
         <img src="./images/BMW_logo-removebg-preview.png" alt="BMW Logo" class="logo">
@@ -60,9 +65,28 @@
 
 
       <div class="carlights">
-        
+        <div class="carlights-text">
+          <h2>LED HEADLIGHTS & TAILLIGHTS</h2>
+          <p>
+            Rear lights, like headlights, use exclusively LED light
+            functions. The elongated L-shaped design with closed
+            lighting lines ensures a smooth transition into the trunk
+            lid and highlights the elegance of the rear body.
+          </p>
+        </div>
+
+        <div class="carlights-images">
+          <div class="img-card top-card">
+            <img src="./images/behance_img_7 (head-light).jpg" alt="BMW Headlight">
+          </div>
+          <div class="img-card bottom-card">
+            <img src="./images/behance_img_5 (tail-light).jpg" alt="BMW Taillight">
+          </div>
+        </div>
       </div>
     </section>
+
+    <!-- //page_4// -->
     <section class="slide page4">
       <div class="page-logos">
         <img src="./images/BMW_logo-removebg-preview.png" alt="BMW Logo" class="logo">
@@ -79,6 +103,8 @@
       </div>
 
     </section>
+
+    <!-- //page_5// -->
     <section class="slide page5">
        <div class="page-logos">
         <img src="./images/BMW_logo-removebg-preview.png" alt="BMW Logo" class="logo">
@@ -100,6 +126,8 @@
       </div>
 
     </section>
+
+    <!-- //page_6// -->
     <section class="slide page6">
       <div class="page-logos">
         <img src="./images/BMW_logo-removebg-preview.png" alt="BMW Logo" class="logo">
@@ -116,6 +144,8 @@
       </div>
 
     </section>
+
+    <!-- //page_7// -->
     <section class="slide page7">
       <div class="page-logos">
         <img src="./images/BMW_logo-removebg-preview.png" alt="BMW Logo" class="logo">
@@ -147,6 +177,7 @@
 
     </section>
       
+    <!-- //page_8// -->
     <section class="slide page8">
       <div class="page-logos">
         <img src="./images/BMW_logo-removebg-preview.png" alt="BMW Logo" class="logo">
