--- a/car-site/bmw-site.html
+++ b/car-site/bmw-site.html
@@ -68,10 +68,10 @@
         <div class="carlights-text">
           <h2>LED HEADLIGHTS & TAILLIGHTS</h2>
           <p>
-            Rear lights, like headlights, use exclusively LED light
-            functions. The elongated L-shaped design with closed
-            lighting lines ensures a smooth transition into the trunk
-            lid and highlights the elegance of the rear body.
+            Rear lights, like headlights, use exclusively LED light<br>
+            functions. The elongated L-shaped design with closed<br>
+            lighting lines ensures a smooth transition into the trunk<br>
+            lid and highlights the elegance of the rear body.<br>
           </p>
         </div>
 
