--- a/car-site/bmw-site.html
+++ b/car-site/bmw-site.html
@@ -118,10 +118,10 @@
 
       <div class="inte-exte">
         <div class="inte-left">
-          <span class="label interior">INTERIOR</span>
+          <span class="label inte">INTERIOR</span>
         </div>
         <div class="inte-right">
-          <span class="label exterior">EXTERIOR</span>
+          <span class="label exte">EXTERIOR</span>
         </div>
       </div>
 
@@ -140,7 +140,18 @@
 
 
       <div class="interior">
-        
+          <div class="interior-text">
+            <h2>INTERIOR</h2>
+            <p>EXQUISITE PERFECTION IN EVERY DETAIL</p>
+          </div>
+
+          <div class="plus-box p1">+</div>
+          <div class="plus-box p2">+</div>
+          <div class="plus-box p3">+</div>
+          <div class="plus-box p4">+</div>
+          <div class="plus-box p5">+</div>
+          <div class="plus-box p6">+</div>
+          <div class="plus-box p7">+</div>
       </div>
 
     </section>
