add something new

--- a/car-site/bmw-site.html
+++ b/car-site/bmw-site.html
@@ -97,9 +97,42 @@
       </div>
 
 
+      <div class="left-side">
+        <div class="left-side-text">
+          <h3>M  ENGINE  COMPETITION</h3>
+          <p>
+            The 3.0-liter M TwinPower Turbo engine combines the best of two worlds: the ability to reach high 
+            revolutions — up to 7,600 rpm — and enormous torque of 550 Nm. Direct injection with twin 
+            turbocharging and precise tuning guarantee explosive acceleration and confident traction. Numerous 
+            innovations deliver unprecedented dynamics, emphasized by the unmistakable and instantly 
+            recognizable “voice” of the M engine.
+          </p>
+        </div>
+      </div>
 
       <div class="specification">
+        <img src="./images/behance_img_12-removebg-preview.png" alt="engine" class="engine">
+        <img src="./images/bmw_emplom-removebg-preview.png" alt="emplom" class="emplom">
+      </div>
 
+      <div class="stats">
+        <div class="stat-box">
+          <span class="top-span">POWER</span>
+          <h3>450</h3>
+          <span class="bottom-span">HP POWER</span>
+        </div>
+
+        <div class="stat-box">
+          <span class="top-span">0-100 km/h</span>
+          <h3>4.1</h3>
+          <span class="bottom-span">0-100 KM/H</span>
+        </div>
+
+        <div class="stat-box">
+          <span class="top-span">TOP SPEED</span>
+          <h3>300</h3>
+          <span class="bottom-span">km/h</span>
+        </div>
       </div>
 
     </section>
@@ -198,6 +231,7 @@
         <img src="./images/youtube_logo.png" alt="youtube logo" class="social youtube">
       </div>
 
+￼
       <div class="testdrive-blur">
 
         <h2>TEST DRIVE</h2>
