adjust some values and added another

--- a/car-site/bmw-site.html
+++ b/car-site/bmw-site.html
@@ -48,7 +48,12 @@
 
 
       <div class="car">
-
+        <div class="page-background">
+          <img src="./images/page_2_background.jpg" alt="background">
+        </div>
+        <div class="car-cut">
+          <img src="./images/behance_img_2-removebg-preview.png" alt="car-cut">
+        </div>
       </div>
     </section>
 
