add and style page 3

--- a/car-site/bmw-site.html
+++ b/car-site/bmw-site.html
@@ -47,6 +47,18 @@
       </div>
 
 
+
+      <div class="car-leftside">
+        <div class="car-leftside-text">
+          <h3>ATHLETIC COUPÉ SILHOUETTE</h3>
+          <p>The car, with sculpted lines and a smoothly sloping coupé roof, combined with exclusive lightweight alloy 
+            wheels and aerodynamic M exterior mirrors, radiates concentrated sporty energy. The elongated 
+            silhouette ends with a striking rear section that embodies restrained power.
+          </p>
+        </div>
+      </div>
+
+
       <div class="car">
         <div class="page-background">
           <img src="./images/page_2_background.jpg" alt="background">
