--- a/car-site/check.html
+++ b/car-site/check.html
@@ -2,172 +2,183 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>BMW Page 3 – Car Lights</title>
-
-<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;600&display=swap" rel="stylesheet">
+<title>BMW UI Page 2</title>
 
 <style>
 *{
   margin:0;
   padding:0;
   box-sizing:border-box;
+  font-family: Arial, sans-serif;
 }
 
 html,body{
   width:100%;
   height:100%;
-  font-family:'Oswald',sans-serif;
+  background:#000;
   overflow:hidden;
 }
 
-/* ===== PAGE 3 NEON DARK BACKGROUND ===== */
-.page3 {
-  position: relative;
-  width: 100%;
-  height: 100vh;
-  overflow: hidden;
+/* ==== PAGE 2 SECTION ==== */
+.page2{
+  width:100%;
+  height:100vh;
+  position:relative;
+  overflow:hidden;
   background:
-    radial-gradient(circle at 15% 30%, rgba(80,0,120,.9), transparent 55%),
-    radial-gradient(circle at 90% 70%, rgba(180,0,90,.9), transparent 55%),
-    linear-gradient(120deg, #050014, #120018, #1a001f);
+    radial-gradient(circle at 15% 30%, rgba(40,0,80,.95), transparent 55%),
+    radial-gradient(circle at 85% 70%, rgba(180,0,80,.95), transparent 60%),
+    linear-gradient(120deg, rgb(8,0,20), rgb(18,0,35), rgb(30,0,40));
+  display:flex;
+  justify-content:center;
+  align-items:center;
 }
 
-/* ===== SOFT GLASS SHADE LEFT ===== */
-.page3::after {
-  content:"";
+/* ==== LOGOS ==== */
+.page-logos{
   position:absolute;
-  inset:0;
-  background: linear-gradient(
-    90deg,
-    rgba(0,0,0,.85) 0%,
-    rgba(0,0,0,.55) 35%,
-    transparent 70%
-  );
-  z-index:0;
+  top:20px;
+  right:40px;
+  z-index:5;
 }
 
-/* ===== MAIN LAYOUT ===== */
-.carlights {
-  position: relative;
-  z-index: 2;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 0 7%;
+.logo{
+  width:55px;
 }
 
-/* ===== LEFT TEXT ===== */
-.carlights-text {
-  width: 40%;
-  color: white;
+/* Social icons left side */
+.social{
+  position:absolute;
+  left:20px;
+  width:22px;
+  opacity:0.7;
+  transition:.3s;
+}
+.social:hover{
+  opacity:1;
+  transform:scale(1.1);
 }
 
-.carlights-text h2 {
-  font-size: 36px;
-  letter-spacing: 3px;
-  margin-bottom: 28px;
+.facebook{ top:40vh; }
+.linkedin{ top:44vh; }
+.instagram{ top:48vh; }
+.youtube{ top:52vh; }
+
+/* ==== CAR SECTION ==== */
+.car{
+  position:relative;
+  width:1200px;
+  height:600px;
 }
 
-.carlights-text p {
-  font-size: 15px;
-  line-height: 1.9;
-  opacity: 0.85;
-}
-
-/* ===== RIGHT IMAGE STACK ===== */
-.carlights-images {
-  position: relative;
-  width: 52%;
-  height: 430px;
-}
-
-/* Parallelogram cards */
-.img-card {
-  position: absolute;
-  width: 480px;
-  height: 250px;
+/* Parallelogram background */
+.page-background{
+  position:absolute;
+  right:0;
+  top:50%;
+  transform:translateY(-50%);
+  width:640px;
+  height:420px;
   clip-path: polygon(
     20% 0%,
     100% 0%,
     80% 100%,
     0% 100%
   );
-  overflow: hidden;
-  background: #000;
-  box-shadow: 0 30px 70px rgba(0,0,0,.9);
+  overflow:hidden;
+  z-index:1;
 }
 
-.img-card img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+.page-background img{
+  width:100%;
+  height:100%;
+  object-fit:cover;
 }
 
-/* ===== TOP CARD ===== */
-.top-card {
-  top: 0;
-  right: 0;
-  z-index: 2;
-}
-
-/* ===== BOTTOM CARD ===== */
-.bottom-card {
-  bottom: 0;
-  right: 110px;
-  z-index: 1;
-}
-
-/* ===== NEON GLOW ON IMAGES ===== */
-.img-card::after {
-  content:"";
+/* Car PNG */
+.car-cut{
   position:absolute;
-  inset:0;
-  background:
-    radial-gradient(circle at 75% 30%,
-      rgba(255,90,160,.35),
-      transparent 60%
-    ),
-    linear-gradient(
-      120deg,
-      rgba(255,255,255,.06),
-      rgba(0,0,0,.35)
-    );
-  pointer-events:none;
+  right:40px;
+  bottom:20px;
+  z-index:2;
+}
+
+.car-cut img{
+  width:720px;
+  filter: drop-shadow(0 30px 45px rgba(0,0,0,.9));
+}
+
+/* ==== LEFT TEXT ==== */
+.car-leftside{
+  position:absolute;
+  left:7%;
+  top:50%;
+  transform:translateY(-50%);
+  width:420px;
+  color:white;
+  z-index:3;
+}
+
+.car-leftside-text h3{
+  font-size:34px;
+  letter-spacing:3px;
+  margin-bottom:22px;
+}
+
+.car-leftside-text p{
+  font-size:17px;
+  line-height:1.9;
+  opacity:.85;
+}
+
+/* ==== RESPONSIVE ==== */
+@media(max-width:1024px){
+  .car{width:100%; height:500px;}
+  .page-background{width:480px; height:320px;}
+  .car-cut img{width:520px;}
+  .car-leftside{width:320px; left:5%;}
 }
 </style>
-</head>
 
+</head>
 <body>
 
-<section class="slide page3">
+<section class="page2">
 
-  <div class="carlights">
+  <!-- BMW Logo -->
+  <div class="page-logos">
+    <img src="./images/BMW_logo-removebg-preview.png" class="logo">
+  </div>
 
-    <!-- LEFT TEXT -->
-    <div class="carlights-text">
-      <h2>LED HEADLIGHTS & TAILLIGHTS</h2>
+  <!-- Social icons -->
+  <img src="./images/facebook_logo.png" class="social facebook">
+  <img src="./images/linkedin_logo.png" class="social linkedin">
+  <img src="./images/instagram_logo.png" class="social instagram">
+  <img src="./images/youtube_logo.png" class="social youtube">
+
+  <!-- Left text -->
+  <div class="car-leftside">
+    <div class="car-leftside-text">
+      <h3>ATHLETIC COUPÉ SILHOUETTE</h3>
       <p>
-        Rear lights, like headlights, use exclusively LED light functions.
-        The elongated L-shaped design with closed lighting lines ensures a smooth
-        transition into the trunk lid and highlights the elegance of the rear body.
+        The car, with sculpted lines and a smoothly sloping coupé roof,
+        combined with exclusive lightweight alloy wheels and aerodynamic
+        M exterior mirrors, radiates concentrated sporty energy.
+        The elongated silhouette ends with a striking rear section
+        that embodies restrained power.
       </p>
     </div>
+  </div>
 
-    <!-- RIGHT PARALLELOGRAM IMAGES -->
-    <div class="carlights-images">
-
-      <div class="img-card top-card">
-        <img src="./images/behance_img_7 (head-light).jpg" alt="BMW Headlight">
-      </div>
-
-      <div class="img-card bottom-card">
-        <img src="./images/behance_img_5 (tail-light).jpg" alt="BMW Taillight">
-      </div>
-
+  <!-- Car + background -->
+  <div class="car">
+    <div class="page-background">
+      <img src="./images/page_2_background.jpg" alt="background">
     </div>
 
+    <div class="car-cut">
+      <img src="./images/behance_img_2-removebg-preview.png" alt="car">
+    </div>
   </div>
 
 </section>
