--- a/car-site/check.html
+++ b/car-site/check.html
@@ -4,8 +4,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>BMW M Competition</title>
-<style>
 
+<style>
 * {
   margin: 0;
   padding: 0;
@@ -14,29 +14,32 @@
 }
 
 body {
-  background: #000;
-  color: white;
-  overflow-x: hidden;
+  background:#000;
+  color:white;
+  overflow-x:hidden;
 }
 
 /* ===== GLOBAL SLIDE ===== */
 .slide {
-  width: 100%;
-  height: 100vh;
-  position: relative;
-  overflow: hidden;
+  width:100%;
+  height:100vh;
+  position:relative;
+  overflow:hidden;
 }
 
-/* ===== PAGE 1 (HERO) ===== */
+/* ===== PAGE 1 ===== */
 .page1 {
-  background: url("./images/hero-bg.jpg") center/cover no-repeat;
+  background:url("./images/hero-bg.jpg") center/cover no-repeat;
 }
 
 .page1::before {
   content:"";
   position:absolute;
   inset:0;
-  background:linear-gradient(120deg, rgba(20,10,40,.9), rgba(120,30,60,.4));
+  background:
+    radial-gradient(circle at top right, rgba(120,40,70,.4), transparent 60%),
+    radial-gradient(circle at bottom left, rgba(40,80,140,.35), transparent 60%),
+    linear-gradient(120deg, rgba(10,8,20,.95), rgba(60,20,80,.85));
 }
 
 .hero-text {
@@ -52,14 +55,16 @@ body {
 }
 
 .hero-text p {
-  margin-top:20px;
+  margin-top:15px;
   font-size:18px;
   opacity:.8;
 }
 
-/* ===== PAGE 2 (COUPE) ===== */
+/* ===== PAGE 2 ===== */
 .page2 {
-  background: linear-gradient(120deg,#0a0818,#2a0f28);
+  background:
+    radial-gradient(circle at top right, rgba(120,40,70,.35), transparent 60%),
+    linear-gradient(120deg,#050512,#2a0f28);
 }
 
 .page2-content {
@@ -89,11 +94,14 @@ body {
 
 .page2 img {
   width:700px;
+  filter: drop-shadow(0 0 20px rgba(80,120,255,.15));
 }
 
-/* ===== PAGE 3 (HEADLIGHTS) ===== */
+/* ===== PAGE 3 ===== */
 .page3 {
-  background: linear-gradient(120deg,#05050f,#2a0830);
+  background:
+    radial-gradient(circle at bottom left, rgba(120,40,70,.35), transparent 60%),
+    linear-gradient(120deg,#04040d,#28082d);
 }
 
 .page3-content {
@@ -111,21 +119,44 @@ body {
 
 .page3 img {
   width:650px;
+  filter: drop-shadow(0 0 20px rgba(120,40,70,.25));
 }
 
-/* ===== PAGE 4 (ENGINE) ===== */
+/* ===== PAGE 4 ENGINE ===== */
 .page4 {
-  position: relative;
-  background: url("./images/behance_img_4.jpg") center/cover no-repeat;
+  position:relative;
+  background:url("./images/behance_img_4.jpg") center/cover no-repeat;
 }
 
 .page4::before {
   content:"";
   position:absolute;
   inset:0;
-  background: linear-gradient(120deg, rgba(40,30,60,.55), rgba(120,40,70,.15));
-  backdrop-filter: blur(12px);
+  background:
+    radial-gradient(circle at top right, rgba(120,40,70,.45), transparent 60%),
+    radial-gradient(circle at bottom left, rgba(40,60,120,.35), transparent 60%),
+    linear-gradient(120deg, rgba(8,6,18,.98), rgba(50,15,70,.9));
+  backdrop-filter: blur(8px);
   z-index:1;
+}
+
+/* Diagonal neon streak */
+.page4::after {
+  content:"";
+  position:absolute;
+  right:-20%;
+  top:-10%;
+  width:70%;
+  height:120%;
+  background: linear-gradient(
+    120deg,
+    transparent 30%,
+    rgba(255,60,120,.18),
+    rgba(60,120,255,.18),
+    transparent 70%
+  );
+  transform: skewX(-12deg);
+  z-index:2;
 }
 
 /* Left angled panel */
@@ -135,9 +166,11 @@ body {
   top:0;
   width:67vw;
   height:100vh;
-  background: linear-gradient(135deg, rgba(10,10,25,.95), rgba(10,10,25,.55));
+  background:
+    linear-gradient(135deg, rgba(8,8,18,.98), rgba(15,10,30,.9)),
+    radial-gradient(circle at bottom right, rgba(120,40,70,.25), transparent 60%);
   clip-path: polygon(0 0, 93% 0, 50% 100%, 0 100%);
-  z-index:2;
+  z-index:3;
   display:flex;
   align-items:center;
   padding-left:7%;
@@ -165,13 +198,14 @@ body {
   right:6%;
   top:50%;
   transform:translateY(-50%);
-  z-index:3;
+  z-index:4;
 }
 
 .specification .engine {
   width:780px;
   position:relative;
   z-index:2;
+  filter: drop-shadow(0 0 25px rgba(80,120,255,.15));
 }
 
 .specification .emplom {
@@ -181,22 +215,26 @@ body {
   top:-40px;
   opacity:.5;
   z-index:1;
+  filter: drop-shadow(0 0 20px rgba(255,255,255,.25));
 }
 
-/* Stats boxes */
+/* Stats */
 .stats {
   position:absolute;
   bottom:12%;
   left:30%;
   display:flex;
   gap:25px;
-  z-index:3;
+  z-index:4;
 }
 
 .stat-box {
   width:230px;
   height:90px;
-  background:rgba(0,0,0,.65);
+  background:
+    linear-gradient(135deg, rgba(0,0,0,.85), rgba(20,20,40,.95));
+  border:1px solid rgba(255,255,255,.08);
+  backdrop-filter: blur(6px);
   clip-path: polygon(15% 0%,100% 0%,85% 100%,0 100%);
   padding-left:25px;
   display:flex;
@@ -215,9 +253,11 @@ body {
   margin:4px 0;
 }
 
-/* ===== PAGE 5 (INTERIOR) ===== */
+/* ===== PAGE 5 ===== */
 .page5 {
-  background: linear-gradient(120deg,#070014,#2a001f);
+  background:
+    radial-gradient(circle at top left, rgba(120,40,70,.35), transparent 60%),
+    linear-gradient(120deg,#05010c,#250018);
 }
 
 .page5-content {
@@ -231,6 +271,7 @@ body {
 
 .page5 img {
   width:750px;
+  filter: drop-shadow(0 0 20px rgba(120,40,70,.25));
 }
 
 .page5-text h2 {
@@ -238,9 +279,11 @@ body {
   letter-spacing:3px;
 }
 
-/* ===== PAGE 6 (TEST DRIVE) ===== */
+/* ===== PAGE 6 ===== */
 .page6 {
-  background: linear-gradient(120deg,#04000a,#200018);
+  background:
+    radial-gradient(circle at bottom right, rgba(120,40,70,.4), transparent 60%),
+    linear-gradient(120deg,#04000a,#200018);
   display:flex;
   align-items:center;
   justify-content:center;
@@ -287,7 +330,7 @@ body {
         lightweight wheels and aerodynamic mirrors to radiate sporty energy.
       </p>
     </div>
-    <img src="./images/coupe.png" alt="car">
+    <img src="./images/behance_img_10.jpg" alt="car">
   </div>
 </section>
 
